--- a/scraping_django/static/styles.css
+++ b/scraping_django/static/styles.css
@@ -47,3 +47,7 @@ input[type="submit"] {
     top:265px;
     left: 870px;
 }
+#searchForm, #listForm {
+    display: inline-block;
+    margin-right: 10px;
+}
