--- a/scraping_django/templates/article_page.html
+++ b/scraping_django/templates/article_page.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="tr">
-{% csrf_token %}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Makale Bilgi Sitesi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{% static 'article_page.css' %}">
 </head>
 <body>
 
