--- a/scraping_django/static/styles.css
+++ b/scraping_django/static/styles.css
@@ -47,7 +47,8 @@ input[type="submit"] {
     top:265px;
     left: 870px;
 }
-#searchForm, #listForm {
-    display: inline-block;
-    margin-right: 10px;
+.search {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
