--- a/scraping_django/templates/article_page.html
+++ b/scraping_django/templates/article_page.html
@@ -25,6 +25,7 @@
             <p><strong>Özet:</strong> {{ article.abstract }}</p>
         </section>
     {% endfor %}
+    {{keywords}}
 
 </body>
 </html>
